--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "redux": "3.6.0",
     "webpack": "2.6.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "redux-logger": "3.0.6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prestart": "webpack -p",
