--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack": "2.6.1"
   },
   "devDependencies": {
+    "html-webpack-plugin": "2.28.0",
     "redux-logger": "3.0.6"
   },
   "scripts": {
