--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "reduxapp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "engines": {
-    "node": "v7.0.0"
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "NODE_ENV=production webpack -p --config webpack.config.js",
+    "dev": "webpack -w & nodemon ./bin/www"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "2.28.0",
+    "redux-logger": "3.0.6"
   },
   "dependencies": {
     "babel-core": "6.24.1",
@@ -12,24 +17,20 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-1": "6.16.0",
-    "express": "4.15.3",
+    "body-parser": "1.17.2",
+    "cookie-parser": "1.4.3",
+    "debug": "~2.6.3",
+    "express": "~4.15.2",
+    "jade": "1.11.0",
+    "morgan": "1.8.2",
     "react": "15.5.4",
     "react-bootstrap": "0.31.0",
     "react-dom": "15.5.4",
     "react-redux": "5.0.5",
     "react-router": "4.1.1",
     "redux": "3.6.0",
+    "serve-favicon": "2.4.3",
     "webpack": "2.6.1"
-  },
-  "devDependencies": {
-    "html-webpack-plugin": "2.28.0",
-    "redux-logger": "3.0.6"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "NODE_ENV=production webpack -p --config webpack.config.js",
-    "start": "npm run build && node ./server/index.js",
-    "dev": "webpack -w & nodemon ./server/index.js"
   },
   "keywords": [],
   "author": "Anoop Mundathan <anoop.mundathan@gmail.com> (http://anoopmundathan.me/)",
