--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "jade": "1.11.0",
+    "mongoose": "4.11.1",
     "morgan": "1.8.2",
     "react": "15.5.4",
     "react-bootstrap": "0.31.0",
