--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "redux-logger": "3.0.6"
   },
   "dependencies": {
+    "axios": "0.16.2",
     "babel-core": "6.24.1",
     "babel-loader": "7.0.0",
     "babel-preset-es2015": "6.24.1",
@@ -30,6 +31,7 @@
     "react-redux": "5.0.5",
     "react-router": "4.1.1",
     "redux": "3.6.0",
+    "redux-thunk": "2.2.0",
     "serve-favicon": "2.4.3",
     "webpack": "2.6.1"
   },
