--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "cpy:style": "cp -rf ./public/stylesheets ./dist/stylesheets",
     "precpy": "rm -rf dist",
     "cpy": "mkdir ./dist && cp -rf ./public/images ./dist/images && npm run cpy:style",
-    "dev": "npm run cpy && webpack -w",
-    "start": "nodemon bin/www & nodemon apiServer.js"
+    "dev:client": "npm run cpy && webpack -w",
+    "dev:server": "nodemon bin/www & nodemon apiServer.js",
+    "start": "npm run build && node bin/www & node apiServer.js"
   },
   "devDependencies": {
-    "html-webpack-plugin": "2.28.0",
     "redux-logger": "3.0.6"
   },
   "dependencies": {
@@ -26,10 +26,10 @@
     "connect-mongo": "1.3.2",
     "cookie-parser": "1.4.3",
     "debug": "~2.6.3",
+    "ejs": "2.5.6",
     "express": "~4.15.2",
     "express-session": "1.15.4",
     "http-proxy": "1.16.2",
-    "jade": "1.11.0",
     "mongoose": "4.11.1",
     "morgan": "1.8.2",
     "react": "15.5.4",
